--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
